@@ -1,0 +1,2 @@
+def initialize(context):
+    print 'testpackage.initialize called'
